--- a/packwiz/1.20.1-quilt/mods/elytra-slot.pw.toml
+++ b/packwiz/1.20.1-quilt/mods/elytra-slot.pw.toml
@@ -1,13 +1,13 @@
 name = "Elytra Slot"
-filename = "elytraslot-fabric-6.4.0+1.20.1.jar"
+filename = "elytraslot-quilt-6.4.0+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/mSQF1NpT/versions/sx80AQrD/elytraslot-fabric-6.4.0%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/mSQF1NpT/versions/nurfekAB/elytraslot-quilt-6.4.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "76c6796c99cbdce448f3d9194690a501ae7fa364"
+hash = "ee2b952ed584eea151a284c0abd2f322b5bbfc2e"
 
 [update]
 [update.modrinth]
 mod-id = "mSQF1NpT"
-version = "sx80AQrD"
+version = "nurfekAB"
