--- a/packwiz/1.20.1-quilt/mods/harvest-with-ease.pw.toml
+++ b/packwiz/1.20.1-quilt/mods/harvest-with-ease.pw.toml
@@ -1,13 +1,13 @@
 name = "Harvest with ease"
-filename = "harvest-with-ease-fabric-1.20.1-9.0.0.jar"
+filename = "harvest-with-ease-fabric-1.20.1-9.0.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/W4Ajthd2/versions/vL0Ws8PI/harvest-with-ease-fabric-1.20.1-9.0.0.jar"
+url = "https://cdn.modrinth.com/data/W4Ajthd2/versions/jwOpkJyA/harvest-with-ease-fabric-1.20.1-9.0.1.jar"
 hash-format = "sha1"
-hash = "f090fddaa4a0be002df65c5dba7e9d3548d81507"
+hash = "f6750927aa4ab272f456a7dd3a2bf57d317d9b08"
 
 [update]
 [update.modrinth]
 mod-id = "W4Ajthd2"
-version = "vL0Ws8PI"
+version = "jwOpkJyA"
