--- a/packwiz/1.20.1-quilt/mods/moonlight.pw.toml
+++ b/packwiz/1.20.1-quilt/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.12.4-fabric.jar"
+filename = "moonlight-1.20-2.12.6-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/nbhmloUo/moonlight-1.20-2.12.4-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/HYSnbbuA/moonlight-1.20-2.12.6-fabric.jar"
 hash-format = "sha1"
-hash = "669761a7cc7246558c6f5f22b1415e736bbb2a6b"
+hash = "4e2e3a0ad3da3e9d5e8264ec6ee8455e08e0c8d6"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "nbhmloUo"
+version = "HYSnbbuA"
