--- a/packwiz/mods/cull-leaves.pw.toml
+++ b/packwiz/mods/cull-leaves.pw.toml
@@ -1,13 +1,13 @@
 name = "Cull Leaves"
-filename = "cullleaves-quilt-3.2.0.jar"
+filename = "cullleaves-fabric-3.2.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/GNxdLCoP/versions/vGCKmen2/cullleaves-quilt-3.2.0.jar"
+url = "https://cdn.modrinth.com/data/GNxdLCoP/versions/3rzOQJrq/cullleaves-fabric-3.2.0.jar"
 hash-format = "sha1"
-hash = "8c146fc54324030319bfe08dd15b1a96bb189a5d"
+hash = "cbf109f1fb46ca0d8773f91dd35888ded4b2ff99"
 
 [update]
 [update.modrinth]
 mod-id = "GNxdLCoP"
-version = "vGCKmen2"
+version = "3rzOQJrq"
