--- a/packwiz/mods/dynamic-fps.pw.toml
+++ b/packwiz/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.5.1+minecraft-1.20.0-quilt.jar"
+filename = "dynamic-fps-3.5.0+minecraft-1.20.0-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/DdDJ86cX/dynamic-fps-3.5.1%2Bminecraft-1.20.0-quilt.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/aPRTCnlc/dynamic-fps-3.5.0%2Bminecraft-1.20.0-fabric.jar"
 hash-format = "sha1"
-hash = "7dadfeb987979b893d3013413362aef7275d16d3"
+hash = "7afa55b5ba9c661a354aa64c93ad3c0a2b6e1c4b"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "DdDJ86cX"
+version = "aPRTCnlc"
