--- a/packwiz/mods/justenoughbreeding.pw.toml
+++ b/packwiz/mods/justenoughbreeding.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Breeding (JEBr)"
-filename = "justenoughbreeding-quilt-1.20.x-1.2.1.jar"
+filename = "justenoughbreeding-fabric-1.20.x-1.2.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/9Pk89J3g/versions/svaOjU9c/justenoughbreeding-quilt-1.20.x-1.2.1.jar"
+url = "https://cdn.modrinth.com/data/9Pk89J3g/versions/JXF6mh90/justenoughbreeding-fabric-1.20.x-1.2.1.jar"
 hash-format = "sha1"
-hash = "568f5e2f4f5a6fbf48615f69c7cc24be2b0c92c5"
+hash = "e77b102fe036b5d8a1eb78ea9ebd4193a6aaa848"
 
 [update]
 [update.modrinth]
 mod-id = "9Pk89J3g"
-version = "svaOjU9c"
+version = "JXF6mh90"
