--- a/packwiz/shaderpacks/mellow.pw.toml
+++ b/packwiz/shaderpacks/mellow.pw.toml
@@ -1,13 +1,13 @@
 name = "Mellow"
-filename = "Mellow Shader v1.4.2.zip"
+filename = "Mellow Shader v1.4.3.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/BUxf36AP/versions/4eJNPb47/Mellow%20Shader%20v1.4.2.zip"
+url = "https://cdn.modrinth.com/data/BUxf36AP/versions/prgR7ENj/Mellow%20Shader%20v1.4.3.zip"
 hash-format = "sha1"
-hash = "f6ddc83549ac3cbd934468e423ec4a1572f7e8b0"
+hash = "c9f974df5adb774c05b140fd7aac95b73ed799b3"
 
 [update]
 [update.modrinth]
 mod-id = "BUxf36AP"
-version = "4eJNPb47"
+version = "prgR7ENj"
