--- a/packwiz/shaderpacks/noble.pw.toml
+++ b/packwiz/shaderpacks/noble.pw.toml
@@ -1,13 +1,13 @@
 name = "Noble Shaders"
-filename = "Noble v1.6.7.zip"
+filename = "Noble v1.7.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/sclYVqbt/versions/QAc0MeLZ/Noble%20v1.6.7.zip"
+url = "https://cdn.modrinth.com/data/sclYVqbt/versions/uzyvj96x/Noble%20v1.7.zip"
 hash-format = "sha1"
-hash = "d835d0900ca73334035673f4794fbfb9b133ad30"
+hash = "2937aa692a10964afa0f3569efa3007ff507b775"
 
 [update]
 [update.modrinth]
 mod-id = "sclYVqbt"
-version = "QAc0MeLZ"
+version = "uzyvj96x"
