--- a/pack-instance.toml
+++ b/pack-instance.toml
@@ -5,4 +5,4 @@
 url = "https://raw.githubusercontent.com/ssamjh/GristModpack/main"
 
 # If set, changes the default memory allocation:
-#memory = 4096
+memory = 4096
