--- a/mods/double-doors.pw.toml
+++ b/mods/double-doors.pw.toml
@@ -1,6 +1,6 @@
 name = "Double Doors"
 filename = "doubledoors-1.20.1-5.7.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/JrvR9OHr/versions/noOLikKt/doubledoors-1.20.1-5.7.jar"
