--- a/mods/incendium.pw.toml
+++ b/mods/incendium.pw.toml
@@ -1,6 +1,6 @@
 name = "Incendium"
 filename = "Incendium_1.20.x_v5.3.5.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/ZVzW5oNS/versions/uUqarp2H/Incendium_1.20.x_v5.3.5.jar"
