--- a/mods/villager-names-serilum.pw.toml
+++ b/mods/villager-names-serilum.pw.toml
@@ -1,6 +1,6 @@
 name = "Villager Names"
 filename = "villagernames-1.20.1-8.0.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/gqRXDo8B/versions/d3U2qZyj/villagernames-1.20.1-8.0.jar"
