--- a/mods/cobweb.pw.toml
+++ b/mods/cobweb.pw.toml
@@ -1,6 +1,6 @@
 name = "Cobweb"
 filename = "cobweb-fabric-1.20.1-1.0.0.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/dQcfqGbl/versions/AyWecby3/cobweb-fabric-1.20.1-1.0.0.jar"
