--- a/mods/elytra-trims.pw.toml
+++ b/mods/elytra-trims.pw.toml
@@ -1,13 +1,13 @@
 name = "Elytra Trims"
-filename = "elytratrims-fabric-3.4.0+1.20.1.jar"
+filename = "elytratrims-fabric-3.4.1+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XpzGz7KD/versions/ZMXbucPY/elytratrims-fabric-3.4.0%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/XpzGz7KD/versions/r6apLAXP/elytratrims-fabric-3.4.1%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "e7eee667db1fbce3cd466ae98483c426d8ef8138"
+hash = "be86b1f7f6bdbb58825629785cb1c432d0eb6dbf"
 
 [update]
 [update.modrinth]
 mod-id = "XpzGz7KD"
-version = "ZMXbucPY"
+version = "r6apLAXP"
