--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items"
-filename = "jei-1.20.1-fabric-15.3.0.8.jar"
+filename = "jei-1.20.1-fabric-15.8.0.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/MtHhjBC2/jei-1.20.1-fabric-15.3.0.8.jar"
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/q3HWJEOU/jei-1.20.1-fabric-15.8.0.11.jar"
 hash-format = "sha1"
-hash = "883008503c38e4f3dddd16001a497cddc141a574"
+hash = "47e049d2f0b44763d6e1f08cc05fed2f442eb947"
 
 [update]
 [update.modrinth]
 mod-id = "u6dRKJwZ"
-version = "MtHhjBC2"
+version = "q3HWJEOU"
